# ilpcoin

./: .gitignore  README.md  blockchain.py  client.py  design.md  ilp.py  node.py  run_system.sh  setup.cfg
docs/: index.html
docs/common/: blockchain.html  constants.html  ilp.html  index.html
docs/common/sample_ilps/: index.html  knapsack.html  random_knapsack.html  traveling_salesman.html
docs/ilp_queue/: ilp_queue.html  index.html
docs/miner/: client.html  index.html
docs/verifier/: index.html  server.html  verifier.html
ilp_queue/: ilp_queue.py
src/: ilp.py  setup.py
src/ilpcoin/: blockchain.py
src/ilpcoin/common/: blockchain.py  constants.py  ilp.py
src/ilpcoin/common/sample_ilps/: knapsack.py  n_queens.py  random_knapsack.py  traveling_salesman.py
src/ilpcoin/ilp_queue/: __main__.py  ilp_queue.py
src/ilpcoin/miner/: __main__.py  client.py
src/ilpcoin/sample_customer/: __main__.py
src/ilpcoin/verifier/: __main__.py  server.py  verifier.py
src/ilpqueue/: ilp_queue.py
src/tests/: blockchain_tests.py  experiments.py  test_blockchain.py  test_ilp.py  test_ilp_queue.py  test_integration.py  test_verifier.py
verifier/: server.py
