[metadata]
name = ilpcoin
version = 0.0.1

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    miner = ilpcoin.miner.client.__main__:main
    verifier = ilpcoin.verifier.__main__:main
    ilp-queue = ilpcoin.ilp_queue.ilp_queue:app.run
